--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file alias="icons/NetworkConnect.png">icons/NetworkConnect.png</file>
+        <file>ca-cert.crt</file>
     </qresource>
 </RCC>
