--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,14 @@
     <qresource prefix="/">
         <file alias="icons/NetworkConnect.png">icons/NetworkConnect.png</file>
         <file>ca-cert.crt</file>
+        <file>images/Background3.png</file>
+        <file>images/Background4.png</file>
+        <file>images/Login.png</file>
+        <file>images/Login_fin.png</file>
+        <file>images/OTP Login.png</file>
+        <file>images/OTP SignUp.png</file>
+        <file>images/SignUp.png</file>
+        <file>images/SIGNUP_.png</file>
+        <file>images/SignUp_fin.png</file>
     </qresource>
 </RCC>
