--- a/resources.qrc
+++ b/resources.qrc
@@ -1,8 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file alias="icons/NetworkConnect.png">icons/NetworkConnect.png</file>
-        <file>images/Background3.png</file>
-        <file>images/Background4.png</file>
         <file>images/Login.png</file>
         <file>images/Login_fin.png</file>
         <file>images/OTP Login.png</file>
@@ -11,5 +9,7 @@
         <file>images/SIGNUP_.png</file>
         <file>images/SignUp_fin.png</file>
         <file>ca-cert.crt</file>
+        <file>images/Background3.png</file>
+        <file>font/ChosunGu.TTF</file>
     </qresource>
 </RCC>
