--- a/LoginWindow.ui
+++ b/LoginWindow.ui
@@ -59,7 +59,7 @@ QDialog {
       </rect>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="LgoinPage">
       <widget class="QFrame" name="Login">
@@ -318,6 +318,28 @@ QPushButton {
       </widget>
      </widget>
     </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>690</x>
+       <y>60</y>
+       <width>291</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>18</pointsize>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
+      <string>CCTV Monitoring System</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="page_4">
     <property name="styleSheet">
@@ -339,7 +361,7 @@ QPushButton {
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="resources.qrc">:/images/Background4.png</pixmap>
+      <pixmap>:/images/Background4.png</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
