--- a/resources.qrc
+++ b/resources.qrc
@@ -11,7 +11,16 @@
         <file>ca-cert.crt</file>
         <file>font/ChosunGu.TTF</file>
         <file>images/Background3.png</file>
-        <file>icons/bounding-box blue.png</file>
-        <file>icons/bounding-box.png</file>
+        <file>icons/file-import.png</file>
+        <file>icons/import-file.png</file>
+        <file>icons/data-import.png</file>
+        <file>icons/cil_pen.png</file>
+        <file>icons/cil_pen_clicked.png</file>
+        <file>icons/eraser.png</file>
+        <file>icons/eraser_clicked.png</file>
+        <file>icons/export-file.png</file>
+        <file>icons/export-file_clicked.png</file>
+        <file>icons/close.png</file>
+        <file>icons/squares.png</file>
     </qresource>
 </RCC>
