--- a/resources.qrc
+++ b/resources.qrc
@@ -10,7 +10,6 @@
         <file>images/SignUp_fin.png</file>
         <file>ca-cert.crt</file>
         <file>images/Background3.png</file>
-
         <file>icons/file-import.png</file>
         <file>icons/import-file.png</file>
         <file>icons/data-import.png</file>
@@ -20,10 +19,8 @@
         <file>icons/eraser_clicked.png</file>
         <file>icons/export-file.png</file>
         <file>icons/export-file_clicked.png</file>
-        <file>icons/close.png</file>
         <file>icons/squares.png</file>
-
         <file>font/05HanwhaGothicR.ttf</file>
-
+        <file>icons/exit.png</file>
     </qresource>
 </RCC>
