--- a/resources.qrc
+++ b/resources.qrc
@@ -22,5 +22,7 @@
         <file>icons/squares.png</file>
         <file>font/05HanwhaGothicR.ttf</file>
         <file>icons/exit.png</file>
+        <file>icons/left.png</file>
+        <file>icons/right.png</file>
     </qresource>
 </RCC>
