modify etc settings

--- a/resources.qrc
+++ b/resources.qrc
@@ -22,5 +22,6 @@
         <file>font/05HanwhaGothicR.ttf</file>
         <file>icons/download.png</file>
         <file>icons/exit.png</file>
+        <file>icons/squares_clicked.png</file>
     </qresource>
 </RCC>
