--- a/LoginWindow.ui
+++ b/LoginWindow.ui
@@ -27,7 +27,7 @@ QDialog {
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="page_3">
     <widget class="QLabel" name="BackgroundLabel">
@@ -61,7 +61,7 @@ QDialog {
      <property name="currentIndex">
       <number>1</number>
      </property>
-     <widget class="QWidget" name="LgoinPage">
+     <widget class="QWidget" name="LoginPage">
       <widget class="QFrame" name="Login">
        <property name="geometry">
         <rect>
@@ -414,7 +414,7 @@ QPushButton {
       </rect>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="SignUpPage">
       <widget class="QFrame" name="SignUp">
@@ -618,7 +618,6 @@ QCheckBox::indicator {
 QCheckBox::indicator:checked {
     image: none;
     background-color: #f26b1d; /* 체크 시 배경색 */
-    border: 1px solid #f26b1d;
 }
 
 QCheckBox::indicator:unchecked {
